--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
     <string name="tab_text_3">Curiosity</string>
+    <string name="main_fragment_label">Main Fragment</string>
+    <string name="apod_fragment_label">Astronomy Photo of the Day</string>
 </resources>
