--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">Mars Rovers Pictures</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
-    <string name="tab_text_3">Curiosity</string>
-    <string name="main_fragment_label">Main Fragment</string>
+    <string name="main_fragment_label">Photos</string>
     <string name="apod_fragment_label">Astronomy Photo of the Day</string>
+    <string name="gallery_fragment_label">Gallery</string>
 </resources>
